--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -36,7 +36,6 @@
             <!-- Hero inventory component -->
             <div id="hero-inventory">
                 <h4>Inventory</h4>
-                <p><strong>[Inventory Content]</strong></p>
                 <div class="inventory-grid">
                     @foreach (var item in inventory.Items)
                     {
@@ -83,6 +82,7 @@
                         HeroCreated="heroCreated"
                         OnHeroStatsUpdated="UpdateHeroStats"
                         OnFightStateChange="HandleFightStateChange"
+                        OnInventoryUpdated="UpdateInventory"
                         OnFight="HandleFight"
                         IsFighting="(() => isFighting)" 
                         Inventory="inventory"/>
@@ -141,7 +141,7 @@
 }
 
 @code {
-    public Inventory inventory { get; set; } = new Inventory();
+    private Inventory inventory { get; set; } = new();
     // Fight component properties
     private Hero? hero;
     private Monster? monster;
@@ -149,10 +149,18 @@
     private bool heroCreated;
     private string? CharacterName;
     private string? CharacterClass;
+    private bool isInventoryUpdated;
 
     // Map component properties
     private MapComponent mapComponent = null!;
     private bool isGameOver = false;
+
+    // Set Game Over
+    private void SetGameOver(bool state)
+    {
+        isGameOver = state;
+        inventory.CheckGameOver(isGameOver);
+    }
 
     // Fight component methods
     private void HeroBaseAttack()
@@ -240,13 +248,18 @@
         }
         if (hero.CurrentHealthValue == 0)
         {
-            isGameOver = true;
+            SetGameOver(true);
         }
     }
               
     private void UpdateHeroStats(Hero updatedHero)
     {
         StateHasChanged();
+    }
+
+    private void UpdateInventory(bool state)
+    {
+        isInventoryUpdated = state;
     }
 
     private void StartGame()
@@ -257,7 +270,7 @@
     
     private void GameOver()
     {
-        isGameOver = true;
+        SetGameOver (true);
     }
 
     // Restarts a new game
@@ -265,7 +278,7 @@
     {
         heroCreated = false;
         isFighting = false;
-        isGameOver = false; // Turns off the game over popup
+        SetGameOver(false); // Turns off the game over popup
     }
 
     // OnInitialized method
