Correction et importation chest

--- a/Pages/MapComponent.razor.css
+++ b/Pages/MapComponent.razor.css
@@ -26,22 +26,11 @@
     background-position: center;
 }
 
-@keyframes treasureSpriteAnimation {
-    from {
-        background-position: 0;
-    }
-    to {
-        background-position: -189px;
-    }
-}
-
 .treasureSprite {
-    width: 64px;
-    height: 64px;
-    background-image: url('./images/Chest.png');
+    background-image: url('./images/Chest2.gif');
     background-repeat: no-repeat;
-    animation: treasureSpriteAnimation 0.8s steps(3) infinite;
-    transform-origin: center center;
+    background-size: 100px;
+    background-position: center;
 }
 
 .Right {
