Création de l'archer
Création de l'archer + balance

--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -63,10 +63,10 @@
                 <div>
                     <label for="characterClass">Choose a class :</label><br/>
                     <select id="characterClass" @bind="CharacterClass" required>
-                        <option value="Choose a class" disabled selected>Choose a class</option>
+                        <option value="" disabled selected>Choose a class</option>
                         <option value="Mage">Mage</option>
                         <option value="Warrior">Warrior</option>
-                        <option value="Archer" disabled>Archer</option>
+                        <option value="Archer">Archer</option>
                     </select>
                 </div>
                 <br/>
